# AI_learning_coach

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  health.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml
agent/: cache.py  cost_tracker.py  evaluator.py  graph.py  llm.py  models.py  planner.py  resilience.py  tutor.py
api/: __init__.py  deps.py  routes.py  schemas.py  server.py
config/: __init__.py  logging_config.py  prompts.py  settings.py
data/: knowledge_graph.json
prompts/: evaluator.yaml  planner.yaml  tutor.yaml
tests/: __init__.py  test_auth.py  test_knowledge_graph.py  test_models.py  test_spaced_repetition.py
utils/: __init__.py  auth.py  knowledge_graph.py  progress_store.py  spaced_repetition.py
