[project]
name = "ai-coach-langchain"
version = "0.2.0"
description = "AI学习教练 - 基于LangGraph的智能学习系统"
requires-python = ">=3.12"
license = {text = "MIT"}

# ============================================================
# Ruff — Lightning-fast Python linter & formatter
# ============================================================
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".git", "__pycache__", ".venv", "venv", "*.ipynb"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify (code simplification)
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "RUF001", # ambiguous full-width characters (Chinese project)
    "RUF002", # ambiguous full-width in docstrings (Chinese project)
    "RUF003", # ambiguous full-width in comments (Chinese project)
]

[tool.ruff.lint.isort]
known-first-party = ["agent", "config", "utils"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================
# MyPy — Static type checker
# ============================================================
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["venv/", ".venv/", "tests/"]
